--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Behind the Scenes</title>
   </head>
   <body>
+    <!-- React checks for necessary DOM updates vis a "Virtual DOM"
+    IT creates & compares virtual DOM snapshots to found out which parts of the rendered UI need to be iudates.
+    -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
